[package]
name = "turso"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
reqwest = { version = "0.11", features = ["json"] }
menva.workspace = true
serde.workspace = true
serde_json.workspace = true
strum_macros = "0.26.1"
strum = "0.26.1"
