[package]
name = "turso"
version = "0.1.0"
edition = "2021"
description = "Turso platform API"
license = "MIT"
repository = "https://github.com/lucas-montes/turso-client"
authors = ["Lucas Montes <lluc23@hotmail.com>"]
categories = ["turso", "databases"]
documentation = "https://docs.rs/turso/"
keywords = ["turso", "edge-database"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
menva = "1.0.0"
reqwest = { version = "0.11", features = ["json"] }
strum_macros = "0.26.1"
strum = "0.26.1"

# For turso_utils
tokio = { version = "1.36.0", features = ["full"] }

