[package]
name = "turso"
version = "0.1.0"
edition = "2021"
description = "Turso platform API"
license = "MIT"
repository = "https://github.com/lucas-montes/turso-client"
authors = ["Lucas Montes <lluc23@hotmail.com>"]
categories = ["turso", "databases"]
documentation = "https://docs.rs/turso/"
keywords = ["turso", "edge-database"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
menva = "1.0.0"
reqwest = { version = "0.11", features = ["json"] }
strum_macros = "0.26.1"
strum = "0.26.1"

